force-app/main/default/objects/RegionalSettings__mdt/RegionalSettings__mdt.object-meta.xml
<CustomObject>
    <description>Region configuration</description>
    <label>Regional Settings</label>
    <pluralLabel>Regional Settings</pluralLabel>
</CustomObject>