force-app/main/default/objects/RegionalSettings__mdt/fields/InstallationsEnabled__c.field-meta.xml
<CustomField>
    <fullName>InstallationsEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enables intallation requests for the region</description>
    <label>Installations Enabled</label>
    <type>Checkbox</type>
</CustomField>