force-app/main/default/objects/RegionalSettings__mdt/fields/reassignOwner__c.field-meta.xml
<CustomField>
    <fullName>reassignOwner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>indica si se debe reasignar el owner en la ampliacion de Accounts si es generico</description>
    <label>reassign owner</label>
    <type>Checkbox</type>
</CustomField>