force-app/main/default/objects/RegionalSettings__mdt/fields/SalesOrganization__c.field-meta.xml
<CustomField>
    <fullName>SalesOrganization__c</fullName>
    <description>Sales organization code</description>
    <label>Sales Organization</label>
    <length>3</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>